Bootstrap fixes for broken selects and overlapping dropdown (#2216)
* fix broken create options and filter unwanted values in options

* fix the overlapping dropdown issue

* increase z-Index for InputGroup where it exists with Select

* declare new z-index variable in bootstrap-config

--- a/app/assets/stylesheets/global-styles/bootstrap-config.scss
+++ b/app/assets/stylesheets/global-styles/bootstrap-config.scss
@@ -4,6 +4,16 @@ $info: #5bc0de;
 $warning: #f0ad4e;
 $danger: #d9534f;
 
+$zindex-levels: (
+  n1: -1,
+  0: 0,
+  1: 1,
+  2: 2,
+  3: 3,
+  4: 4,
+  5: 5,
+);
+
 @import "bootstrap/functions";
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
